chonky_nums.h

typedef unsigned char bool;
typedef unsigned char      u8;
typedef unsigned long long u64;
typedef long long s64;
// TODO: Check memory deallocations on error paths.
// TODO: Check for error handling paths.
// TODO: Refactor a bit and clean.
/// -----------------------------------------
///  BigNum Structure Manipulation Functions
/// -----------------------------------------
EXPORT_STRUCTURE typedef struct BigNum {
	union {
		u8* data;
		u64* data_64;
	};
	u64 size;
	u8 sign;
} BigNum;
EXPORT_FUNCTION BigNum* alloc_chonky_num(const u8* data, const u64 size, bool sign) {
	BigNum* num = calloc(1, sizeof(BigNum));
	if (num == NULL) {
		WARNING_LOG("Failed to allocate BigNum.");
		return NULL;
	}

	num -> sign = sign;
	num -> size = align_64(size);

	num -> data = (u8*) calloc(num -> size, sizeof(u8));
	if (num -> data == NULL) {
		free(num);
		WARNING_LOG("Failed to allocate data buffer.");
		return NULL;
	}
	
	if (data != NULL) mem_cpy(num -> data, data, size);

	return num;
}
EXPORT_FUNCTION void dealloc_chonky_num(BigNum* num) {
	free(num -> data);
	num -> data = NULL;
	free(num);
	return;
}
EXPORT_FUNCTION BigNum* alloc_chonky_num_from_string(const char* data_str) {
	const u64 data_str_len = str_len(data_str);
	if (data_str == NULL || data_str_len == 0) {
		WARNING_LOG("Invalid parameters.");
		return NULL;
	}
	
	BigNum* num = calloc(1, sizeof(BigNum));
	if (num == NULL) {
		WARNING_LOG("Failed to allocate BigNum.");
		return NULL;
	}

	num -> sign = (data_str[0] == '-');
	num -> size = align_64(data_str_len / 2 + 1);

	num -> data = (u8*) calloc(num -> size, sizeof(u8));
	if (num -> data == NULL) {
		free(num);
		WARNING_LOG("Failed to allocate data buffer.");
		return NULL;
	}
	
	u64* temp = calloc(num -> size, sizeof(u8));
	if (temp == NULL) {
		dealloc_chonky_num(num);
		WARNING_LOG("Failed to allocate temp buffer.");
		return NULL;
	}
	
	for (u64 i = (*data_str == '-'); i < data_str_len; ++i) {
		if (!IS_A_DEC_DIGIT(data_str[i])) {
			SAFE_FREE(temp);
			dealloc_chonky_num(num);
			WARNING_LOG("'%c': is not a valid digit.", data_str[i]);
			return NULL;
		}
		
		chonky_shift_dec(num, temp);
		chonky_add_decimal(num, data_str[i] - '0');
	}

	SAFE_FREE(temp);

	if (chonky_resize(num, 0)) return NULL;

	return num;
}
EXPORT_FUNCTION BigNum* alloc_chonky_num_from_hex_string(const char* data_str) {
	const u64 data_str_len = str_len(data_str);
	if (data_str == NULL || data_str_len == 0) {
		WARNING_LOG("Invalid parameters.");
		return NULL;
	}
	
	BigNum* num = calloc(1, sizeof(BigNum));
	if (num == NULL) {
		WARNING_LOG("Failed to allocate BigNum.");
		return NULL;
	}

	char* hex_str = (char*) data_str + (*data_str == '-');
	u64 hex_str_len = str_len(hex_str);
	
	if (hex_str_len > 2 && *hex_str == '0' && hex_str[1] == 'x') hex_str += 2;
	hex_str_len = str_len(hex_str);
	
	num -> sign = (data_str[0] == '-');
	num -> size = align_64((hex_str_len - (hex_str_len % 2)) / 2 + (hex_str_len % 2));

	num -> data = (u8*) calloc(num -> size, sizeof(u8));
	if (num -> data == NULL) {
		free(num);
		WARNING_LOG("Failed to allocate data buffer.");
		return NULL;
	}

	for (s64 i = hex_str_len - 1, j = 0; i >= 0; i -= 2, ++j) {
		if (!IS_A_HEX_DIGIT(hex_str[i])) {
			dealloc_chonky_num(num);
			WARNING_LOG("'%c': is not a valid digit.", hex_str[i]);
			return NULL;
		} else if ((i - 1 >= 0) && !IS_A_HEX_DIGIT(hex_str[i - 1])) {
			dealloc_chonky_num(num);
			WARNING_LOG("'%c': is not a valid digit.", hex_str[i - 1]);
			return NULL;
		}

		u8 low = char_to_hex(hex_str[i]);
		u8 high = (i - 1 >= 0) ? char_to_hex(hex_str[i - 1]) : 0;
		(num -> data)[j] = low | (high << 4);
	}

	return num;
}
EXPORT_FUNCTION void print_chonky_num(char* name, BigNum* num, bool use_hex) {
	const u64 real_size = chonky_real_size(num);
	
	printf("%s: %s", name, num -> sign ? "-" : "");

	if (use_hex) {
		for (s64 i = real_size - 1; i >= 0; --i) {
			printf("%02X", (num -> data)[i]);
		}
	} else {
		BigNum* num_dp = dup_chonky_num(num);
		if (num_dp == NULL) {
			WARNING_LOG("Failed to dupe the big num.");
			return;
		}

		char* buf = calloc(num_dp -> size * 3, sizeof(u8));
		if (num_dp == NULL) {
			dealloc_chonky_num(num_dp);
			WARNING_LOG("Failed to alloc the buffer.");
			return;
		}

		for (u64 i = 0; !is_chonky_zero(num_dp); ++i) {
			buf[i] = chonky_dec_divmod(num_dp) + '0';
		}

		reverse_str(buf);

		dealloc_chonky_num(num_dp);

		printf("%s", buf);
		SAFE_FREE(buf);
	}

	printf(" (size: %llu, real size: %llu)\n", num -> size, real_size);

	return;
}
EXPORT_FUNCTION BigNum* chonky_add(const BigNum* a, const BigNum* b) {
	if (a == NULL || b == NULL) {
		WARNING_LOG("Parameters must be not null.");
		return NULL;
	}

	BigNum* res = alloc_chonky_num(NULL, align_64(MAX(a -> size, b -> size) + 1), 0);
	if (res == NULL) return NULL;

	res -> sign = (a -> sign && b -> sign)          || 
		          (chonky_is_gt(a, b) && a -> sign) || 
			      (chonky_is_gt(b, a) && b -> sign);
	
	if ((a -> sign && !b -> sign) || (!a -> sign && b -> sign)) {
		const BigNum* minuend = a -> sign ? b : a;
		const BigNum* subtraend = a -> sign ? a : b;
		res = __chonky_sub(res, minuend, subtraend);
	} else res = __chonky_add(res, a, b);
	   	
	return res;
}
EXPORT_FUNCTION BigNum* chonky_sub(const BigNum* a, const BigNum* b) {
	BigNum* minuend = dup_chonky_num(b);
	if (minuend == NULL) return NULL;
	minuend -> sign = !(b -> sign);
	BigNum* res = chonky_add(a, minuend);
	dealloc_chonky_num(minuend);
	return res;
}
EXPORT_FUNCTION BigNum* chonky_mul(const BigNum* a, const BigNum* b) {
	if (a == NULL || b == NULL) {
		WARNING_LOG("Parameters must be not null.");
		return NULL;
	}

	BigNum* res = alloc_chonky_num(NULL, align_64(a -> size + b -> size) + 8, 0);
	if (res == NULL) return NULL;
	
	res -> sign = a -> sign | b -> sign;
	res = __chonky_mul_s(res, a, b);

	return res;
}
EXPORT_FUNCTION BigNum* chonky_div(const BigNum* a, const BigNum* b) {
	if (a == NULL || b == NULL) {
		WARNING_LOG("Parameters must be not null.");
		return NULL;
	}

	BigNum* res = alloc_chonky_num(NULL, align_64(MAX(a -> size, b -> size)), 0);
	if (res == NULL) return NULL;

	res -> sign = a -> sign | b -> sign;
	
	res = __chonky_div(res, NULL, a, b);
	
	if (chonky_resize(res, chonky_real_size(res))) return NULL;

	return res;
}
EXPORT_FUNCTION BigNum* chonky_pow(const BigNum* num, const BigNum* exp) {
	if (num == NULL || exp == NULL) {
		WARNING_LOG("Parameters must be not null.");
		return NULL;
	} else if (chonky_real_size(exp) > 4) {
		WARNING_LOG("Pure exponentiation, does not allow for exponent with more than four bytes (%llu).", chonky_real_size(exp));
		return NULL;
	}

	const u64 size = chonky_real_size(num) * __chonky_spow(2, chonky_real_size(exp) * 8);
	BigNum* res = alloc_chonky_num(NULL, align_64(size), 0);
	if (res == NULL) return NULL;

	res -> sign = num -> sign * ((exp -> data)[0] & 0x01);
	res = __chonky_pow(res, num, exp);
	
	if (chonky_resize(res, chonky_real_size(res))) return NULL;

	return res;
}
EXPORT_FUNCTION BigNum* chonky_mod(const BigNum* num, const BigNum* mod) {
	if (num == NULL || mod == NULL) {
		WARNING_LOG("Parameters must be not null.");
		return NULL;
	}

	const u64 size = chonky_real_size(mod);
	BigNum* res = alloc_chonky_num(NULL, align_64(size), 0);
	if (res == NULL) return NULL;

	__chonky_mod(res, num, mod);
	
	if (chonky_resize(res, chonky_real_size(res))) return NULL;

	return res;
}
/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 * NOTE:                                                   * 
 * We do not check if the mod given is a Mersenne prime,   *
 * as that's the job of the caller                         *
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
EXPORT_FUNCTION BigNum* chonky_mod_mersenne(const BigNum* num, const BigNum* mod) {
	if (num == NULL || mod == NULL) {
		WARNING_LOG("Parameters must be not null.");
		return NULL;
	}

	const u64 size = chonky_real_size(mod);
	BigNum* res = alloc_chonky_num(NULL, align_64(size), 0);
	if (res == NULL) return NULL;

	res = __chonky_mod_mersenne(res, num, mod);
	
	if (chonky_resize(res, chonky_real_size(res))) return NULL;

	return res;
}