test/chonky_nums.py

# ------------------------------------------------------------
# THIS FILE IS AUTOGENERATED – DO NOT EDIT MANUALLY
# Generated on 19-11-2025 by autogen.py
# From C files: ['../chonky_nums.h']
# ------------------------------------------------------------
import ctypes
from enum import IntEnum

class Chonky_nums:
	def __init__(self):
		self.chonky_nums = ctypes.CDLL("./chonky_nums_py.so")
		pass

class AnonymousUnionA(ctypes.Union):
	_fields_ = [
		("data", ctypes.POINTER(ctypes.c_uint8)),
		("data_64", ctypes.POINTER(ctypes.c_uint64))
	]

class BigNum(ctypes.Structure):
	_fields_ = [
		("AnonymousUnionA", AnonymousUnionA),
		("size", ctypes.c_uint64),
		("sign", ctypes.c_uint8),
	]
	_anonymous_ = ("AnonymousUnionA",)

	def __init__(self, **kwargs):
		for field_name, _ in self._fields_:
			setattr(self, field_name, 0)
		for key, value in kwargs.items():
			if key in [f[0] for f in self._fields_]:
				setattr(self, key, value)
			else:
				raise TypeError(f"Unknown field: {key}")
		pass

	def __repr__(self):
		fields = "\n".join(
			f"\t{name}: {getattr(self, name)!r}" for name, _ in self._fields_
		)
		return f"{self.__class__.__name__}: {{\n{fields}\n}}"

	def __sizeof__():
		return ctypes.sizeof(BigNum)

	def to_bytes(self):
		return bytes(ctypes.string_at(ctypes.addressof(self), ctypes.sizeof(self)))

	def hex_dump(self, sep=" "):
		return sep.join(f"{b:02X}" for b in self.to_bytes())


class ChonkyNums(Chonky_nums):
	def __init__(self):
		super().__init__()
		pass

	def alloc_chonky_num(self, data, size, sign):
		alloc_chonky_num = self.chonky_nums.alloc_chonky_num
		alloc_chonky_num.argtypes = [ ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint64, ctypes.c_bool ]
		alloc_chonky_num.restype = ctypes.POINTER(BigNum)
		return alloc_chonky_num(data, size, sign)

	def dealloc_chonky_num(self, num):
		dealloc_chonky_num = self.chonky_nums.dealloc_chonky_num
		dealloc_chonky_num.argtypes = [ ctypes.POINTER(BigNum) ]
		dealloc_chonky_num.restype = None
		return dealloc_chonky_num(num)

	def alloc_chonky_num_from_string(self, data_str):
		alloc_chonky_num_from_string = self.chonky_nums.alloc_chonky_num_from_string
		alloc_chonky_num_from_string.argtypes = [ ctypes.c_char_p ]
		alloc_chonky_num_from_string.restype = ctypes.POINTER(BigNum)
		return alloc_chonky_num_from_string(data_str)

	def alloc_chonky_num_from_hex_string(self, data_str):
		alloc_chonky_num_from_hex_string = self.chonky_nums.alloc_chonky_num_from_hex_string
		alloc_chonky_num_from_hex_string.argtypes = [ ctypes.c_char_p ]
		alloc_chonky_num_from_hex_string.restype = ctypes.POINTER(BigNum)
		return alloc_chonky_num_from_hex_string(data_str)

	def print_chonky_num(self, name, num, use_hex):
		print_chonky_num = self.chonky_nums.print_chonky_num
		print_chonky_num.argtypes = [ ctypes.c_char_p, ctypes.POINTER(BigNum), ctypes.c_bool ]
		print_chonky_num.restype = None
		return print_chonky_num(name, num, use_hex)

	def chonky_add(self, a, b):
		chonky_add = self.chonky_nums.chonky_add
		chonky_add.argtypes = [ ctypes.POINTER(BigNum), ctypes.POINTER(BigNum) ]
		chonky_add.restype = ctypes.POINTER(BigNum)
		return chonky_add(a, b)

	def chonky_sub(self, a, b):
		chonky_sub = self.chonky_nums.chonky_sub
		chonky_sub.argtypes = [ ctypes.POINTER(BigNum), ctypes.POINTER(BigNum) ]
		chonky_sub.restype = ctypes.POINTER(BigNum)
		return chonky_sub(a, b)

	def chonky_mul(self, a, b):
		chonky_mul = self.chonky_nums.chonky_mul
		chonky_mul.argtypes = [ ctypes.POINTER(BigNum), ctypes.POINTER(BigNum) ]
		chonky_mul.restype = ctypes.POINTER(BigNum)
		return chonky_mul(a, b)

	def chonky_div(self, a, b):
		chonky_div = self.chonky_nums.chonky_div
		chonky_div.argtypes = [ ctypes.POINTER(BigNum), ctypes.POINTER(BigNum) ]
		chonky_div.restype = ctypes.POINTER(BigNum)
		return chonky_div(a, b)

	def chonky_pow(self, num, exp):
		chonky_pow = self.chonky_nums.chonky_pow
		chonky_pow.argtypes = [ ctypes.POINTER(BigNum), ctypes.POINTER(BigNum) ]
		chonky_pow.restype = ctypes.POINTER(BigNum)
		return chonky_pow(num, exp)

	def chonky_mod(self, num, mod):
		chonky_mod = self.chonky_nums.chonky_mod
		chonky_mod.argtypes = [ ctypes.POINTER(BigNum), ctypes.POINTER(BigNum) ]
		chonky_mod.restype = ctypes.POINTER(BigNum)
		return chonky_mod(num, mod)

	def chonky_mod_mersenne(self, num, mod):
		chonky_mod_mersenne = self.chonky_nums.chonky_mod_mersenne
		chonky_mod_mersenne.argtypes = [ ctypes.POINTER(BigNum), ctypes.POINTER(BigNum) ]
		chonky_mod_mersenne.restype = ctypes.POINTER(BigNum)
		return chonky_mod_mersenne(num, mod)

